<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/gd_background_3"
    tools:context=".LoginActivity">

    <ProgressBar
        android:id="@+id/create_account_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/edit_text_border"
        android:orientation="vertical"
        android:layout_marginBottom="100dp"
        >

        <EditText
            android:id="@+id/create_userName_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/userName_hint"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:background="@drawable/edit_text_border"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="15dp" />

        <AutoCompleteTextView
            android:id="@+id/create_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:background="@drawable/edit_text_border"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"/>

        <EditText
            android:id="@+id/create_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:background="@drawable/edit_text_border"
            android:inputType="textPassword"
            android:minHeight="48dp"
             />
        <Button
            android:id="@+id/create_account_button"
            android:text="@string/create_account_text"
            android:background="@android:color/transparent"
            android:textColor="@color/login_text_color"
            android:layout_marginTop="30dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"

            />



    </LinearLayout>

</LinearLayout>