<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/gd_background_1"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_slab_bold"
        android:padding="5dp"
        android:textSize="25sp"
        android:textColor="@color/login_text_color"
        android:textStyle="bold"
        android:text="@string/title_text" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="5dp"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:elevation="10dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="12dp"
            app:cardUseCompatPadding="true">


            <TextView
                android:id="@+id/grateful_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:elevation="15dp"
                android:foregroundGravity="center"
                android:gravity="center"
                android:padding="10dp"
                android:textSize="19sp"
                android:textStyle="bold"
                android:text="@string/grateful_text"
                android:textAlignment="center" />

        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <Button
        android:id="@+id/getStarted_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_button_text"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@android:color/transparent"
        android:textColor="@color/teal_200"

        />


</LinearLayout>