<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gd_background_5"
    tools:context=".CreatePostJournal">


    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="215dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/image_view"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/edit_text_border_2"
         />

    <ImageButton
        android:id="@+id/upload_image_button"
        android:layout_width="150dp"
        android:layout_height="111dp"
        android:alpha="0.9"
        android:background="@android:color/transparent"
        android:contentDescription="@string/camera_vector_image"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/background_image"
        app:layout_constraintEnd_toEndOf="@+id/background_image"
        app:layout_constraintStart_toStartOf="@+id/background_image"
        app:layout_constraintTop_toTopOf="@+id/background_image"
        app:srcCompat="@drawable/ic_baseline_camera_alt_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/title_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/enter_title_hint"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:background="@drawable/edit_text_border_2"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:paddingStart="12dp"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/background_image" />


    <EditText
        android:id="@+id/thought_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:background="@drawable/edit_text_border_2"
        android:hint="@string/thought_hint"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="textMultiLine"
        android:padding="20dp"
        android:paddingStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_edit_text" />

    <Button
        android:id="@+id/post_journal_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:background="@drawable/edit_text_border"
        android:padding="12dp"
        android:text="@string/post_journal_text"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/post_journal_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/post_journal_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thought_edit_text" />

    <TextView
        android:id="@+id/post_userName_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:padding="5dp"
        android:text="UserName"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/background_image"
        app:layout_constraintEnd_toEndOf="@+id/background_image"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upload_image_button" />
</androidx.constraintlayout.widget.ConstraintLayout>